--- a/bcnf.ipynb
+++ b/bcnf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "from preparation import *\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 19,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "class NF:\n",
@@ -79,6 +79,17 @@
     "                    result = False\n",
     "                    break\n",
     "        return result,vio\n",
+    "    def get_nontrival(self,dependency):\n",
+    "        \"\"\"\n",
+    "        去除dependency中的平凡依赖，保存非平凡依赖\n",
+    "        :param dependency: 函数依赖集（3-dimension list）\n",
+    "        :return: 非平凡依赖集，3-dimension list\n",
+    "        \"\"\"\n",
+    "        result = []\n",
+    "        for i in dependency:\n",
+    "            if not set(i[1]).issubset(set(i[0])):\n",
+    "                result.append(i)\n",
+    "        return  result\n",
     "\n",
     "    def BCNF(self):\n",
     "        \"\"\"\n",
@@ -89,6 +100,9 @@
     "        done = False\n",
     "        test = 0\n",
     "        step = {'root':self.R}\n",
+    "        decompose_times = 0\n",
+    "        # F_plus_nontrival = self.get_nontrival(calculate_function_dependency_closure_set_by_armstrong_axioms(self.R,self.F))\n",
+    "        F_plus = calculate_function_dependency_closure_set_by_armstrong_axioms(self.R,self.F)##优化\n",
     "        while(not done):\n",
     "            allBCNF = True\n",
     "            for i in range(len(result)):\n",
@@ -96,8 +110,8 @@
     "                temp_R_set = set(temp_R)\n",
     "                temp_done = False\n",
     "                # print(temp_R,self.check_schemaInBCNF(temp_R))\n",
-    "                bc,vio = self.check_schemaInBCNF(temp_R)\n",
-    "                if not bc:##\n",
+    "                bc,vio = self.check_schemaInBCNF(temp_R)#检查Ri属于BCNF\n",
+    "                if not bc:#\n",
     "                    # print(allBCNF)\n",
     "                    allBCNF = False\n",
     "                    # print(allBCNF)\n",
@@ -106,12 +120,25 @@
     "                    alpha_set = set(alpha)\n",
     "                    beta_set = set(beta)\n",
     "                    if alpha_set.isdisjoint(beta_set):#alpha和beta的交集为空\n",
-    "                        step['decompose_dependency']= vio\n",
-    "                        result.remove(temp_R)\n",
-    "                        result.append(list(alpha_set.union(beta_set)))\n",
-    "                        step['left'] = list(alpha_set.union(beta_set))\n",
-    "                        result.append(list(temp_R_set.difference(beta_set)))\n",
-    "                        step['right'] = {'root':list(temp_R_set.difference(beta_set))}\n",
+    "                        decompose = True\n",
+    "                        for j in F_plus:\n",
+    "                            if j[0] == alpha  and j[1] == temp_R:\n",
+    "                                decompose = False\n",
+    "                                break\n",
+    "                        if decompose:\n",
+    "                            temp_step = step\n",
+    "                            for i in range(decompose_times):\n",
+    "                                temp_step = step['right']\n",
+    "                            # step['decompose_dependency']= vio\n",
+    "                            decompose_times +=1\n",
+    "                            temp_step['decompose_dependency']= vio\n",
+    "                            result.remove(temp_R)\n",
+    "                            result.append(list(alpha_set.union(beta_set)))\n",
+    "                            # step['left'] = list(alpha_set.union(beta_set))\n",
+    "                            temp_step['left'] = list(alpha_set.union(beta_set))\n",
+    "                            result.append(list(temp_R_set.difference(beta_set)))\n",
+    "                            # step['right'] = {'root':list(temp_R_set.difference(beta_set))}\n",
+    "                            temp_step['right'] = {'root':list(temp_R_set.difference(beta_set))}\n",
     "                        # temp_done = True\n",
     "                    # for s in self.F:\n",
     "                    #     alpha =s[0]#list\n",
@@ -137,7 +164,7 @@
     "                    #                     break\n",
     "                # if temp_done:\n",
     "                #     break\n",
-    "            print(allBCNF,'\\t',result,'\\t',test)\n",
+    "            print(allBCNF,'\\t',result,'\\t',test,'\\t',step,'\\t','\\n')\n",
     "            if(allBCNF):\n",
     "                done = True\n",
     "        return result,step"
@@ -151,25 +178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 21,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4] [[[1, 2], [3]], [[3], [4]], [[4], [1]]]\n"
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11] [[[1], [2, 3, 4]], [[8, 9], [10]], [[1, 5, 6, 7], [8, 9, 11]]]\n"
      ]
     }
    ],
    "source": [
-    "# R = [i for i in range(1,12)]\n",
-    "# F = [[[1],[2,3,4]],[[8,9],[10]],[[1,5,6,7],[8,9,11]]]\n",
+    "R = [i for i in range(1,12)]\n",
+    "F = [[[1],[2,3,4]],[[8,9],[10]],[[1,5,6,7],[8,9,11]]]\n",
     "#answer:[{1, 2, 3, 4}, {8, 9, 10}, {1, 5, 6, 7, 8, 9, 11}]\n",
-    "R = [i for i in range(1,4,1)]\n",
-    "F = [[[1],[2]],[[2],[3]]]\n",
+    "# R = [i for i in range(1,4,1)]\n",
+    "# F = [[[1],[2]],[[2],[3]]]\n",
     "#answer：[[2, 3], [1, 2]]\n",
-    "R = [i for i in range(1,5)]\n",
-    "F = [[[1,2],[3]],[[3],[4]],[[4],[1]]]\n",
+    "# R = [i for i in range(1,5)]\n",
+    "# F = [[[1,2],[3]],[[3],[4]],[[4],[1]]]\n",
+    "# [[1.4],[3,4],[2,3]]\n",
+    "# R = [i for i in range(1,5)]\n",
+    "# F = [[[2],[3]],[[2],[4]]]\n",
+    "#[[2,3,4],[1,2]]\n",
     "print(R,F)"
    ],
    "metadata": {
@@ -181,28 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False \t [[3, 4], [1, 2, 3]] \t 0\n",
-      "True \t [[3, 4], [1, 2, 3]] \t 0\n"
+      "False \t [[1, 2, 3, 4], [1, 5, 6, 7, 8, 9, 10, 11]] \t 0 \t {'root': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], 'decompose_dependency': [[1], [2, 3, 4]], 'left': [1, 2, 3, 4], 'right': {'root': [1, 5, 6, 7, 8, 9, 10, 11]}} \t \n",
+      "\n",
+      "False \t [[1, 2, 3, 4], [8, 9, 10], [1, 5, 6, 7, 8, 9, 11]] \t 0 \t {'root': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], 'decompose_dependency': [[1], [2, 3, 4]], 'left': [1, 2, 3, 4], 'right': {'root': [1, 5, 6, 7, 8, 9, 10, 11], 'decompose_dependency': [[8, 9], [10]], 'left': [8, 9, 10], 'right': {'root': [1, 5, 6, 7, 8, 9, 11]}}} \t \n",
+      "\n",
+      "True \t [[1, 2, 3, 4], [8, 9, 10], [1, 5, 6, 7, 8, 9, 11]] \t 0 \t {'root': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], 'decompose_dependency': [[1], [2, 3, 4]], 'left': [1, 2, 3, 4], 'right': {'root': [1, 5, 6, 7, 8, 9, 10, 11], 'decompose_dependency': [[8, 9], [10]], 'left': [8, 9, 10], 'right': {'root': [1, 5, 6, 7, 8, 9, 11]}}} \t \n",
+      "\n",
+      "235.91945457458496\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "([[3, 4], [1, 2, 3]],\n {'root': [1, 2, 3, 4],\n  'decompose_dependency': [[3], [4]],\n  'left': [3, 4],\n  'right': {'root': [1, 2, 3]}})"
-     },
-     "execution_count": 349,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "nf = NF(R,F)\n",
-    "nf.BCNF()"
+    "import  time\n",
+    "starttime = time.time()\n",
+    "nf.BCNF()\n",
+    "print(time.time()-starttime)"
    ],
    "metadata": {
     "collapsed": false,
@@ -213,14 +244,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False \t [[3, 4], [1, 2, 3]] \t 0\n",
-      "True \t [[3, 4], [1, 2, 3]] \t 0\n"
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3460, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_22344\\269470051.py\", line 1, in <module>\n",
+      "    result = nf.BCNF()\n",
+      "  File \"C:\\Users\\Administrator\\AppData\\Local\\Temp\\ipykernel_22344\\2570534610.py\", line 60, in BCNF\n",
+      "    F_plus = calculate_function_dependency_closure_set_by_armstrong_axioms(self.R,self.F)##优化\n",
+      "  File \"G:\\SCUT2\\github_project\\DataBase\\preparation.py\", line 121, in calculate_function_dependency_closure_set_by_armstrong_axioms\n",
+      "    F = transitivity_rule(R,F)\n",
+      "  File \"G:\\SCUT2\\github_project\\DataBase\\preparation.py\", line -1, in transitivity_rule\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2057, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1118, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1012, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 865, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 818, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(r))\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 736, in format_record\n",
+      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
+      "    return only(\n",
+      "  File \"I:\\software\\python\\anaconda3\\lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
      ]
     }
    ],
@@ -236,21 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[351], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m result:\n\u001B[1;32m----> 2\u001B[0m     bc ,vio\u001B[38;5;241m=\u001B[39m \u001B[43mnf\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcheck_schemaInBCNF\u001B[49m\u001B[43m(\u001B[49m\u001B[43mj\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m bc:\n\u001B[0;32m      4\u001B[0m         \u001B[38;5;28mprint\u001B[39m(j,\u001B[38;5;124m'\u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;124m'\u001B[39m,vio)\n",
-      "Cell \u001B[1;32mIn[347], line 29\u001B[0m, in \u001B[0;36mNF.check_schemaInBCNF\u001B[1;34m(self, schemaR)\u001B[0m\n\u001B[0;32m     27\u001B[0m alpha_set \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m(i[\u001B[38;5;241m0\u001B[39m])\n\u001B[0;32m     28\u001B[0m beta_set \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m(i[\u001B[38;5;241m1\u001B[39m])\n\u001B[1;32m---> 29\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m  \u001B[38;5;129;01mnot\u001B[39;00m beta_set\u001B[38;5;241m.\u001B[39missubset(alpha_set) \u001B[38;5;129;01mand\u001B[39;00m (alpha_set\u001B[38;5;241m.\u001B[39munion(beta_set))\u001B[38;5;241m.\u001B[39missubset(\u001B[38;5;28;43mset\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mschemaR\u001B[49m\u001B[43m)\u001B[49m):\u001B[38;5;66;03m#保证该依赖是非平凡依赖且在Ri中，可以被分解\u001B[39;00m\n\u001B[0;32m     30\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcheck_NontrivialDependencyCaseViolationOfBCNF(i,schemaR):\u001B[38;5;66;03m#检查该依赖是否违背BC范式\u001B[39;00m\n\u001B[0;32m     31\u001B[0m     \u001B[38;5;66;03m#     result = True\u001B[39;00m\n\u001B[0;32m     32\u001B[0m     \u001B[38;5;66;03m# else:\u001B[39;00m\n\u001B[0;32m     33\u001B[0m         vio \u001B[38;5;241m=\u001B[39m i\n",
-      "\u001B[1;31mTypeError\u001B[0m: unhashable type: 'list'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# for j in result:\n",
     "#     bc ,vio= nf.check_schemaInBCNF(j)\n",
@@ -282,31 +347,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[1, 2], [3]], [[3], [4]], [[4], [1]]]\n",
-      "False \t [[3, 4], [1, 2, 3]] \t 0\n",
-      "True \t [[3, 4], [1, 2, 3]] \t 0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "([[3, 4], [1, 2, 3]],\n {'root': [1, 2, 3, 4],\n  'decompose_dependency': [[3], [4]],\n  'left': [3, 4],\n  'right': {'root': [1, 2, 3]}})"
-     },
-     "execution_count": 352,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "F_cover = compute_canonical_cover_set(nf.F)\n",
     "print(F_cover)\n",
     "nf_cover = NF(R,F_cover)\n",
     "nf.BCNF()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import preparation\n",
+    "\n",
+    "preparation.calculate_function_dependency_closure_set_by_armstrong_axioms(nf.R,nf.F)"
    ],
    "metadata": {
     "collapsed": false,
