--- a/bcnf.ipynb
+++ b/bcnf.ipynb
@@ -3,17 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "outputs": [],
-   "source": [
-    "from preparation import *\n",
-    "import copy"
-   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "from preparation import *\n",
+    "import copy"
+   ]
   },
   {
    "cell_type": "code",
@@ -29,18 +29,24 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "class NF:\n",
@@ -168,17 +174,17 @@
     "            if(allBCNF):\n",
     "                done = True\n",
     "        return result,step"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -202,17 +208,17 @@
     "# F = [[[2],[3]],[[2],[4]]]\n",
     "#[[2,3,4],[1,2]]\n",
     "print(R,F)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -234,17 +240,17 @@
     "starttime = time.time()\n",
     "nf.BCNF()\n",
     "print(time.time()-starttime)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -304,96 +310,90 @@
    ],
    "source": [
     "result = nf.BCNF()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# for j in result:\n",
     "#     bc ,vio= nf.check_schemaInBCNF(j)\n",
     "#     if not bc:\n",
     "#         print(j,'\\t',vio)"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "# for s in nf.F:\n",
     "#     if (nf.check_NontrivialDependencyCaseViolationOfBCNF(s,result[2])):\n",
     "#         print(s,calculate_single_attribute_closure(s[0],nf.F))"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "F_cover = compute_canonical_cover_set(nf.F)\n",
     "print(F_cover)\n",
     "nf_cover = NF(R,F_cover)\n",
     "nf.BCNF()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "import preparation\n",
     "\n",
     "preparation.calculate_function_dependency_closure_set_by_armstrong_axioms(nf.R,nf.F)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Anaconda20230403",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -407,9 +407,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3196968d684371006099b3d55edeef8ed90365227a30deaef86e5d4aa8519be0"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
