--- a/bcnf.ipynb
+++ b/bcnf.ipynb
@@ -198,8 +198,8 @@
     "R = [i for i in range(1,12)]\n",
     "F = [[[1],[2,3,4]],[[8,9],[10]],[[1,5,6,7],[8,9,11]]]\n",
     "#answer:[{1, 2, 3, 4}, {8, 9, 10}, {1, 5, 6, 7, 8, 9, 11}]\n",
-    "# R = [i for i in range(1,4,1)]\n",
-    "# F = [[[1],[2]],[[2],[3]]]\n",
+    "R = [i for i in range(1,4,1)]\n",
+    "F = [[[1],[2]],[[2],[3]]]\n",
     "#answer：[[2, 3], [1, 2]]\n",
     "# R = [i for i in range(1,5)]\n",
     "# F = [[[1,2],[3]],[[3],[4]],[[4],[1]]]\n",
